Fixed a bug where the scrollbar was affecting the sidebar

--- a/src/styles/brackets_scrollbars.less
+++ b/src/styles/brackets_scrollbars.less
@@ -98,13 +98,13 @@
     }
 }
 
-.platform-win {
+.platform-win .content {
     ::-webkit-scrollbar {
-      background: #f0f0f0;
-      width: 15px;
+        background: #f0f0f0;
+        width: 15px;
     }
     ::-webkit-scrollbar-thumb {
-      background: #cdcdcd;
-      width: 15px;
+        background: #cdcdcd;
+        width: 15px;
     }
 }
